    package view and the preview screen before installing of the curses
    interface, there was no character for downgrades.  There was 'u' for
    upgrades, 'd' for removals, 'p' for purges, 'h' for holds, etc., but the
    action character for downgrades was missing, so the column was left empty --
    as it was an specific background colour until recently.

  * [curses] Show feedback of forbid-version with verbose>0 (Closes: #638841)

  * [curses] Require args for some commands: hold, keep... (Closes: #759520)

- Internal changes:

  * In internal_mark_delete(), also check for auto-installability property of
    real packages providing virtual packages to stop them being marked for
    deletion.  can_remove_autoinstalled() checks for this anyway, but the
    implementation could change in the future, and it shouldn't hurt to double
    check.

  * Convert some instances of boost::unordered_{set,map,multimap} to std::

  * Convert some instances of boost::hash to std::

  * Remove two uses of boost::lexical_cast, use std::to_string() instead

  * Create utility function remove_non_recursive()

- Documentation:

  * manpage:

    * Remove wrong assertion that safe-upgrade does not accept --full-resolver
      (Closes: #560991)

    * Document missing &BD specifier when installing packages (Closes: #696568)

  * Guide/User's Manual:

    * Update renamed config option ::CmdLine::Show-Summary (Closes: #776789)

      The config option used in the code is ::CmdLine::Show-Summary, but in one
      place in the documentation it was named ::CmdLine::Why-Display-Mode
      (probably from an incomplete rename).

    * Correct some wrong examples of search patterns (Closes: #519456)


[2015-10-07]
Version 0.7.3

- Bug fixes:

  * [cmdline] Correctly calculate the indentation for multi-byte encoded strings
    in command line "show" (Closes: #360202)

  * [curses] Show intended action when downgrading (Closes: #516517)
