@@ -67,7 +67,8 @@ Version 0.7.4 UNRELEASED
     action character for downgrades was missing, so the column was left empty --
     as it was an specific background colour until recently.
 
-  * [curses] Show feedback of forbid-version with verbose>0 (Closes: #638841)
+  * [curses] Show feedback of some commands (hold, forbidden-version, ...) with
+    verbose>0 (Closes: #270033, #638841)
 
   * [curses] Require args for some commands: hold, keep... (Closes: #759520)
 
